--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,7 @@
 {
+  "short_name": "Le Pestacle",
 
+  "id": "https://mmi21a02.sae301dev.ovh/accueil",
+  "start_url": "https://mmi21a02.sae301dev.ovh/accueil",
+  "theme_color": "#E35A50"
 }
